# junction-astrobros

./: .gitignore  config.py  oil.py  pyproject.toml  readme.md  slides_data.md  test_download_pic.py  test_forest.py
api/: dependencies.py  main.py
api/data/: 2020.tif  2021.tif
api/data/55e077eb5aa496e8b8d79f477ce0cab2/: request.json
api/data/6d3fb59176972b5ed68da3b0930cbe66/: request.json
api/data/a6cd34b3aede11eadc4bd82562115574/: request.json
api/data/c1737d5deb9854cef7dca4348f169a64/: request.json
api/data/c57ccf9a24a369542ddb6114e8565428/: request.json
api/data/f587ab98ff71be56e2525ac0374ffd0e/: request.json
api/routers/: root.py
cli/: test_download_pic.py
data/: 2018.tif  2019.tif  2022.tif  2023.tif
data/55e077eb5aa496e8b8d79f477ce0cab2/: request.json
data/6d3fb59176972b5ed68da3b0930cbe66/: request.json
data/a6cd34b3aede11eadc4bd82562115574/: request.json
data/c1737d5deb9854cef7dca4348f169a64/: request.json
data/c57ccf9a24a369542ddb6114e8565428/: request.json
data/f587ab98ff71be56e2525ac0374ffd0e/: request.json
junction-astrobros-ui/: package-lock.json  package.json  vite.config.ts
junction-astrobros-ui/src/: App.css  App.tsx  index.css
junction-astrobros-ui/src/components/ButtonGroup/: ButtonGroup.css  ButtonGroup.tsx
junction-astrobros-ui/src/components/DetailPage/: DetailedPage.css  DetailsPage.tsx
junction-astrobros-ui/src/components/LayerPicker/: LayerPicker.tsx
junction-astrobros-ui/src/components/Layout/: Layout.css  Layout.tsx
junction-astrobros-ui/src/utilities/: coordinates-helper.ts
(+8 files in other folders)
