[project]
name = "junction-astrobros"
version = "0.1.0"
description = "Building a ecological disaster incident investigation tool."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2024.11.0",
    "fastapi[standard]>=0.115.4",
    "ipyleaflet>=0.19.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pydantic-settings>=2.6.1",
    "rasterio>=1.4.2",
    "rioxarray>=0.18.1",
    "ruff>=0.7.3",
    "sentinelhub>=3.11.1",
]
